samples/_failures_safe/1761716057_b251c0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d161881b.c: In function ‘main’:
./samples/SAFE/__tmp_d161881b.c:151:9: error: expected expression at end of input
  151 |         input_str[--input_len] =
      |         ^~~~~~~~~
./samples/SAFE/__tmp_d161881b.c:151:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d161881b.c:151:9: error: expected declaration or statement at end of input
